force-app/main/default/objects/System_Limit__c/System_Limit__c.object-meta.xml
<CustomObject>
    <description>1. Not integration relevant
2. ZRD
3. SF-913 / Stores Platform Event and API Call Limits for the Org</description>
    <label>Systemlimit</label>
    <nameField>
        <displayFormat>SL-{00000000}</displayFormat>
        <label>System Limit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Systemlimits</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>