force-app/main/default/objects/System_Limit__c/fields/Limit_Name__c.field-meta.xml
<CustomField>
    <fullName>Limit_Name__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-913 / Filled by Batch Job</description>
    <label>Limit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>