force-app/main/default/objects/System_Limit__c/fields/Maximum_Limit__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Limit__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-913 / Filled by Batch Job</description>
    <label>Maximum Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>