force-app/main/default/objects/System_Limit__c/fields/Open_for_Usage__c.field-meta.xml
<CustomField>
    <fullName>Open_for_Usage__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-913</description>
    <formula>Maximum_Limit__c -  Usage_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open for Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>