force-app/main/default/objects/System_Limit__c/fields/Usage_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Usage_Percentage__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-913</description>
    <formula>Usage_Value__c  /  Maximum_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>