force-app/main/default/objects/System_Limit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Limit_Name__c</columns>
    <columns>Usage_Value__c</columns>
    <columns>Maximum_Limit__c</columns>
    <columns>Open_for_Usage__c</columns>
    <columns>Usage_Percentage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>